# nkz-module-soil

./: .gitignore  README.md  ROADMAP.md  capabilities.yaml  index.html  manifest.json  nkz-module-soil-spec.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: build-push.yml
backend/: .dockerignore  Dockerfile  Dockerfile.migrate  Dockerfile.worker
backend/migrations/: 001_lucas_topsoil.sql  002_lucas_aux.sql  003_esdb_raster_index.sql  004_soil_ingest_audit.sql  005_lucas_land_text_widen.sql  006_lucas_aux_realign.sql  007_lucas_texture_backfill.sql  008_lucas_texture_raster_index.sql
backend/scripts/: run_migrations.py
backend/tests/: conftest.py  test_build_agri_soil_extended_datasource.py
docs/: CATALOG_INGEST.md
docs/runbooks/: lucas-texture-ingest.md
frontend/: package.json  tsconfig.json  vite.config.ts
frontend/src/: Module.tsx  i18n.ts  moduleEntry.ts
k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  job-soil-migrate.yaml  network-policy.yaml  sealed-secret.yaml  secret.yaml  service.yaml
sdm/AgriSoilExtended/: ADOPTERS.yaml  README.md  context.jsonld  example-normalized.json  example.json  notes.yaml  schema.json
sdm/SoilDerivedRaster/: README.md  context.jsonld  example-normalized.json  example.json  notes.yaml  schema.json
sdm/SoilSamplingPoint/: ADOPTERS.yaml  README.md  context.jsonld  example-normalized.json  example.json  notes.yaml  schema.json
sdm/SoilSurvey/: README.md  context.jsonld  (+4 more)
src/: Module.tsx  i18n.ts
tests/: conftest.py  test_capabilities_manifest.py
(+155 files in other folders)
